# surge

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  cliff.toml  deny.toml  py  py-build  release.toml
src/surge-ac/: Cargo.toml  README.md
src/surge-ac/examples/: basic_power_flow.rs
src/surge-ac/src/: ac_dc.rs  lib.rs  test_cases.rs
src/surge-ac/src/control/: discrete.rs  facts.rs  facts_expansion.rs  mod.rs
src/surge-ac/src/matrix/: fused.rs  jacobian.rs  mismatch.rs  mod.rs  ybus.rs
src/surge-ac/src/solver/: fast_decoupled.rs  mod.rs  newton_raphson.rs  nr_bus_setup.rs  nr_interchange.rs  nr_kernel.rs  nr_options.rs  nr_prepared.rs  nr_q_limits.rs  nr_solve.rs  nr_tests.rs
src/surge-ac/src/topology/: mod.rs  zero_impedance.rs
src/surge-ac/tests/: large_case_startup.rs  prepared_acpf.rs
src/surge-bindings/: Cargo.toml  README.md
src/surge-bindings/src/: cli.rs  main.rs  output.rs
src/surge-bindings/tests/: cli_export_tests.rs  end_to_end.rs  test_cgmes_pf.rs  validation.rs
src/surge-bindings/tests/common/: mod.rs
src/surge-contingency/: Cargo.toml  README.md
src/surge-contingency/examples/: contingency_screening.rs
src/surge-contingency/src/: lib.rs  prepared.rs  probabilistic.rs  ranking.rs  scrd.rs  test_util.rs  tests.rs  tpl_report.rs  types.rs  violations.rs
src/surge-contingency/src/advanced/: cascade.rs  mod.rs  n11.rs  n2.rs  opa_cascade.rs  p4.rs  p6.rs
src/surge-contingency/src/corrective/: actions.rs  mod.rs  schemes.rs  triggers.rs
src/surge-contingency/src/engine/: islands.rs  mod.rs  parallel.rs  power_flow.rs  solvers.rs
src/surge-contingency/src/screening/: lodf.rs  mod.rs
src/surge-contingency/src/voltage/: mod.rs  stress_proxy.rs
src/surge-contingency/tests/: test_breaker_contingency.rs  test_contingency.rs  test_matpower_n1_validation.rs  test_matpower_validation.rs
src/surge-dc/: Cargo.toml  README.md
src/surge-dc/src/: bprime.rs  lib.rs  sensitivity.rs  solver.rs  test_util.rs  types.rs
src/surge-dc/tests/: integration_ieee_validation.rs
src/surge-dc/tests/common/: mod.rs
src/surge-dispatch/: Cargo.toml  README.md
src/surge-dispatch/examples/: activsg_dispatch_smoke.rs  activsg_time_series.rs  economic_dispatch.rs
src/surge-dispatch/src/: blocks.rs  dispatch.rs  economics.rs  error.rs  hvdc.rs  ids.rs  legacy.rs  lib.rs  model.rs  model_diagnostic.rs  powerflow.rs  report_ids.rs  request.rs  result.rs  scrd.rs  solution.rs  violations.rs
src/surge-dispatch/src/common/: blocks.rs  builders.rs  catalog.rs  contingency.rs  costs.rs  dc.rs  (+11 more)
src/surge-hvdc/: Cargo.toml  README.md
src/surge-hvdc/src/: advanced.rs  error.rs  experimental.rs  interop.rs  lib.rs  options.rs  result.rs
src/surge-hvdc/tests/: common.rs  test_cigre.rs  test_coverage_expansion.rs  test_hvdc.rs  test_pglib_validation.rs
src/surge-io/: Cargo.toml  README.md
src/surge-io/src/: bin.rs  export.rs  geo.rs  ieee_cdf.rs  json.rs  lib.rs  parse_utils.rs  profiles.rs  pscad.rs  saturation_toml.rs  scl.rs  shaft_toml.rs  union_find.rs  xiidm.rs
src/surge-io/tests/: stress_cgmes.rs  stress_cross_format.rs  stress_dss_ucte.rs  stress_dyr.rs  stress_epc_matpower.rs  stress_matpower_json.rs  stress_psse_xiidm.rs  test_dss.rs  test_dss_validation.rs  test_malformed_input.rs  test_psse_dc_facts.rs  test_rawx.rs  test_seq.rs
src/surge-market/: Cargo.toml  README.md
src/surge-market/examples/: profile_scuc_617.rs
src/surge-market/src/: ac_opf_presets.rs  ac_refinement.rs  ac_sced_setup.rs  canonical_workflow.rs  commitment.rs  heuristics.rs  lib.rs  offers.rs  penalties.rs  profiles.rs  reserves.rs  trajectory.rs  two_stage.rs  windows.rs  workflow.rs
src/surge-market/tests/: canonical_refinement.rs  canonical_workflow.rs
src/surge-network/: Cargo.toml  README.md
src/surge-network/src/: lib.rs  synthetic.rs  ybus.rs
src/surge-opf/: Cargo.toml  README.md  build.rs  copt_nlp_shim.cpp  spral_init.c
src/surge-opf/examples/: dc_opf.rs
src/surge-opf/src/: discrete.rs  lib.rs  nlp.rs  test_util.rs
src/surge-opf/tests/: ac_opf_hvdc_validation.rs  ac_opf_matpower_validation.rs  mip_gap_schedule.rs  opf_slow.rs
src/surge-py/: Cargo.toml  LICENSE  NOTICE  README.md  build.rs  pyproject.toml
src/surge-py/src/: contingency.rs  dispatch.rs  exceptions.rs  go_c3.rs  hvdc.rs  input_types.rs  io.rs  lib.rs  market.rs  matrices.rs  network.rs  network_edit.rs  opf.rs  parameter_sweep.rs  pf.rs  prepared_pf.rs  rich_objects.rs  solutions.rs  stability.rs  test_networks.rs  topology.rs  transfer.rs  utils.rs
src/surge-py/tests/: __init__.py  test_construction_api_surface.py  test_dc_api_surface.py  test_dispatch_api_surface.py  test_io_api_surface.py  test_market_workflow.py  test_native_bootstrap.py  test_native_bootstrap_surface.py  test_new_features.py  test_opf_api_surface.py  test_powerflow_api_surface.py  test_public_surface_parity.py  test_pypsa_nc_bridge.py  test_storage_binding.py  test_subsystem_api_surface.py  test_surge.py  test_to_dict_and_helpers.py  test_topology_api.py  test_transfer_api_surface.py
src/surge-solution/: Cargo.toml  LICENSE-NOTES.md  NOTICE  README.md
src/surge-solution/src/: dispatch_apply.rs  economics.rs  ids.rs  lib.rs  opf_solution.rs  par.rs  power_flow.rs
src/surge-solution/tests/: integration_pf_consistency.rs
src/surge-sparse/: Cargo.toml  README.md  build.rs
src/surge-sparse/src/: complex_klu.rs  csc.rs  error.rs  klu.rs  lib.rs
src/surge-topology/: Cargo.toml  README.md
src/surge-topology/src/: engine.rs  islands.rs  lib.rs  union_find.rs
src/surge-topology/tests/: integration_error_paths.rs  integration_rebuild.rs
src/surge-transfer/: Cargo.toml  README.md
src/surge-transfer/examples/: transfer_capability.rs
src/surge-transfer/src/: ac_atc.rs  atc.rs  dfax.rs  error.rs  injection.rs  lib.rs  matrices.rs  multi_transfer.rs  study.rs  test_util.rs  types.rs
src/surge-transfer/tests/: integration_atc_validation.rs  integration_transfer_coverage.rs
(+754 files in other folders)
