[package]
name = "surge-ac"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Surge AC — Full AC power flow solver (Newton-Raphson, Fast Decoupled, continuation)"
readme = "README.md"
keywords = ["power-systems", "ac-power-flow", "newton-raphson", "fdpf"]
categories = ["science", "simulation", "algorithms"]

[dependencies]
surge-network.workspace = true
surge-solution.workspace = true
surge-sparse.workspace = true
surge-topology.workspace = true
faer.workspace = true
rayon.workspace = true
tracing.workspace = true
thiserror.workspace = true
num-complex.workspace = true
serde.workspace = true

[dev-dependencies]
anyhow.workspace = true
dyn-stack.workspace = true
serde_json.workspace = true
serde-value = "0.7"
zstd = "0.13"
