[package]
name = "surge-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Surge I/O — Parser/writer for MATPOWER, PSS/E RAW, IEEE CDF, XIIDM, UCTE, and JSON case formats"
readme = "README.md"
keywords = ["power-systems", "matpower", "psse", "cgmes", "xiidm"]
categories = ["science", "parser-implementations", "simulation"]

[dependencies]
surge-network.workspace = true
surge-solution.workspace = true
surge-topology.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-value = "0.7"
ciborium = "0.2"
toml.workspace = true
num-complex.workspace = true
tracing.workspace = true
thiserror.workspace = true
crc32fast = "1"
quick-xml = "0.37"
rayon.workspace = true
csv.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
tempfile = "3"

[dev-dependencies]
surge-ac.workspace = true
anyhow.workspace = true
