[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "surge-py"
version = "0.1.5"
description = "AC/DC power flow solver for large-scale transmission networks"
license = { text = "PolyForm Noncommercial 1.0.0" }
requires-python = ">=3.12,<3.15"
dependencies = ["numpy>=1.20"]
readme = "README.md"
keywords = ["power-systems", "power-flow", "optimal-power-flow", "energy", "grid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
sparse = ["scipy>=1.7"]
yaml = ["pyyaml>=5.0"]
dev = ["pytest>=7.0", "pandas>=1.5", "pyyaml>=5.0", "scipy>=1.7"]
dashboard = ["fastapi>=0.100", "uvicorn[standard]>=0.30", "sse-starlette>=2.0", "networkx>=3.0"]

[project.urls]
Homepage = "https://github.com/amptimal/surge"
Repository = "https://github.com/amptimal/surge"
"Bug Tracker" = "https://github.com/amptimal/surge/issues"
Documentation = "https://github.com/amptimal/surge#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "surge._surge"
python-source = "python"
include = [
    { path = "python/surge/libsurge_copt_nlp.so", format = ["wheel"] },
    { path = "python/surge/libsurge_copt_nlp.dylib", format = ["wheel"] },
    { path = "python/surge/surge_copt_nlp.dll", format = ["wheel"] },
]
