[package]
name = "surge-topology"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Topology engine for node-breaker to bus-branch reduction"
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["power-systems", "topology", "node-breaker", "bus-branch"]
categories = ["science", "simulation", "algorithms"]

[dependencies]
surge-network.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
